refactor: upgrade to Spring Boot 4.0.5 and improve user API design
- Bump Spring Boot parent from 4.0.4 to 4.0.5
- Replace /api/users/username/{username} path with ?username= query param
- Add hasChanges() to UpdateUserRequest to skip no-op saves
- Rename MyErrorAttributes → ErrorAttributesConfig for clarity
- Retrieve exception class directly instead of from error attributes map
- Remove unused findByEmail repository method
- Add nullable=false on birthday column in User entity
- Disable open-in-view to avoid lazy-loading issues
- Add restart policy and fix healthcheck format in docker-compose.yml
- Consolidate @Getter/@Setter into @Data on User entity
- Inject applicationName via method param in SwaggerConfig bean
- Modernize tests: List.of(), assertThat(optional).isPresent(), hasValue()
- Add test coverage for no-op patch, username query param, and hasChanges()